--- a/photo.html
+++ b/photo.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>🥐 A picture of a croissant</h1>
+    <img
+      src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg"
+      alt="croissant"
+      width="650px"
+    />
+  </body>
 </html>
