contact page content added

--- a/photo.html
+++ b/photo.html
@@ -12,5 +12,8 @@
       alt="croissant"
       width="650px"
     />
+    <a href="/">Homepage</a>
+    <a href="/photo.html">Photo</a>
+    <a href="/contact.html">Contact</a>
   </body>
 </html>
