--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
@@ -12,8 +13,10 @@
       alt="croissant"
       width="650px"
     />
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <div class="navigation">
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </div>
   </body>
 </html>
