--- a/photo.html
+++ b/photo.html
@@ -2,21 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" content="Photo of a croissant" />
+    <title>Photo of a croissant</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
     <img
       src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg"
-      alt="croissant"
+      alt="Photo of a Croissant"
       width="650px"
     />
-    <div class="navigation">
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
-    </div>
+    <footer class="navigation">
+      <a href="/" title="Homepage">Homepage</a>
+      <a href="/photo.html" title="Photo of a croissant">Photo</a>
+      <a href="/contact.html" title="Contact">Contact</a>
+    </footer>
   </body>
 </html>
