--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,10 @@
   <body>
     <h1>🥐 Contact us</h1>
     <p>
-      To contact croissant.com, please email us at hello@croissant.com for more
-      info
+      To contact croissant.com, please email us at<a
+        href="mailto:hello@croissant.com"
+        >hello@croissant.com</a
+      >for more info
     </p>
     <div class="navigation">
       <a href="/">Homepage</a>
