--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="Order fresh croissants in Ukraine" />
     <title>Croissant</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -13,10 +13,10 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
-    <div class="navigation">
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
-    </div>
+    <footer class="navigation">
+      <a href="/" title="Homepage">Homepage</a>
+      <a href="/photo.html" title="Photo of a croissant">Photo</a>
+      <a href="/contact.html" title="Contact">Contact</a>
+    </footer>
   </body>
 </html>
